Demo/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity_Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <description>Unique order Number Order_No</description>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order_No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_date__c</fullName>
        <label>Order_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>TotalCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>porder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>